flex shrink wrap the flex box. fixed sticky scrollbars

--- a/src/main/java/assets/css/custom.css
+++ b/src/main/java/assets/css/custom.css
@@ -23,10 +23,10 @@ footer {
     text-align: center;
     height: 15px;
     font-family: verdana;
-    font-size: 14px;
+    font-size: 12px;
     color: black;
-    position: fixed;
-    bottom: 0;
+    position: sticky;
+    top: 100%;
     width: 100%;
     padding-top: 2px;
 }
@@ -56,8 +56,6 @@ h1 {
 }
 
 #help {
-    /*position: relative;
-    right: 10px;*/
     display: inline;
 }
 
@@ -93,6 +91,7 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .letters {
@@ -190,6 +189,7 @@ ul {
     left: 0px;
     padding 0;
     margin: 0;
+    flex: 1 0 228px;
 }
 
 #centerP {
